Bug 351602 - kde_baloo_filewatch_raiselimit keeps asking for a password on login
Summary: kde_baloo_filewatch_raiselimit keeps asking for a password on login
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Vishesh Handa
URL: http://imgur.com/DGlLmCS
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-22 07:19 UTC by Marco R.
Modified: 2015-09-05 13:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco R. 2015-08-22 07:19:28 UTC
I updated KDE 2 days ago, and since then this authentication dialog pops up with no application name and no description, just the default one (as seen in the picture). These are the PIDs (polkit.subject-pid and polkit.caller-pid)
[code]
marco 6468 /usr/bin/baloo_file
root 7313 /usr/lib/kauth/kde_baloo_filewatch_raiselimit
[/code]

Reproducible: Always

Steps to Reproduce:
1.Login to KDE 5

Actual Results:  
A dialog box pops up that wants my password

Expected Results:  
No dialog box should pop up, as it's annoying

baloo version is 5.13.0-2
plasma-desktop version is 5.3.2-3
Comment 1 Marco R. 2015-08-22 07:20:23 UTC
Woops, no [code] tag. How do you edit?
Comment 2 Marco R. 2015-08-22 17:13:27 UTC
Oh, and also of you click 'Cancel' the dialog box doesn't go away.
Comment 3 desaparecido 2015-08-25 12:50:04 UTC
hi, I have the same issue, using KF5 and Plasma with latest commits from GIT (Archlinux)
Comment 4 Vishesh Handa 2015-09-01 16:46:30 UTC
Similar bug report - bug 339465

Your inotify limit is too low. Perhaps if it is too low we should just abort and disable Baloo. That might be easier.
Comment 5 Vishesh Handa 2015-09-05 13:53:06 UTC
Git commit ef04fbfa871696b34d1f29ae7338851b9bfaf911 by Vishesh Handa.
Committed on 05/09/2015 at 13:25.
Pushed by vhanda into branch 'master'.

Remove KAuth support to increase max inotify watches if count too low

If the maximum number of inotify watches is too low, we would show a
KAuth dialog asking the user for the root password so that we could
increase the number of watches. Lots of users seem to hate this since
they feel uncomfortable for Baloo to be asking for the root password.

Given that this is an enviroment problem, I'm disabling this extra
support for increasing the limit. Baloo will ignore changes on files
when this happens. In the future, I'll probably just disable Baloo
completely when this happens.

M  +1    -1    CMakeLists.txt
M  +0    -1    src/file/CMakeLists.txt
M  +11   -30   src/file/filewatch.cpp
D  +0    -7    src/file/inotify/CMakeLists.txt
D  +0    -80   src/file/inotify/org.kde.baloo.filewatch.actions
D  +0    -76   src/file/inotify/raiselimit.cpp
D  +0    -31   src/file/inotify/raiselimit.h

http://commits.kde.org/baloo/ef04fbfa871696b34d1f29ae7338851b9bfaf911